--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,3 +4,4 @@
 @import '../components/Icon/style.css';
 @import '../components/Collapse/style.css';
 @import '../components/Tooltip/style.css';
+@import '../components/Dropdown/style.css';
